--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "next": "^12.3.1",
     "next-seo": "^5.6.0",
     "next-sitemap": "^3.1.28",
+    "path": "^0.12.7",
     "postcss-focus-visible": "^6.0.4",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark-gfm": "^3.0.1",
