--- a/package.json
+++ b/package.json
@@ -1,52 +1,27 @@
 {
-  "name": "Federico Pomponii - Personal Website",
-  "start_url": "/",
-  "author": "Federico Pomponii",
+  "name": "fpomponii.it",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "postbuild": "next-sitemap",
+    "dev": "next dev --turbopack",
+    "build": "next build --turbopack",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint"
   },
-  "browserslist": "defaults, not ie <= 11",
   "dependencies": {
-    "@headlessui/react": "^1.7.2",
-    "@mapbox/rehype-prism": "^0.8.0",
-    "@mdx-js/loader": "^2.1.2",
-    "@next/mdx": "^12.2.3",
-    "@tailwindcss/typography": "^0.5.4",
-    "autoprefixer": "^10.4.12",
-    "clsx": "^1.2.1",
-    "fast-glob": "^3.2.11",
-    "feed": "^4.2.2",
-    "focus-visible": "^5.2.0",
-    "next": "^12.3.1",
-    "next-seo": "^5.6.0",
-    "next-sitemap": "^3.1.28",
-    "path": "^0.12.7",
-    "postcss-focus-visible": "^6.0.4",
-    "prismjs": "^1.29.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "remark-gfm": "^3.0.1",
-    "tailwindcss": "^3.1.4",
-    "typescript": "^4.8.4"
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "next": "15.5.4"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.40.1",
-    "@typescript-eslint/parser": "^5.40.1",
-    "eslint": "^8.25.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-next": "12.2.5",
-    "eslint-import-resolver-typescript": "2.7.1",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-react": "^7.31.10",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.11"
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4",
+    "eslint": "^9",
+    "eslint-config-next": "15.5.4",
+    "@eslint/eslintrc": "^3"
   }
 }
